[package]
name = "scroll"
version = "0.1.0"
authors = ["metin ur <metinur.1311@gmail.com>"]
description = "Magical Static Site Generator"
repository = "https://github.com/metinUr/scroll"
readme = "README.md"
keywords = ["static", "site", "generator", "ssg"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"


[dependencies]
clap = "2.33.0"
walkdir = "2.3.1"
tinytemplate = "1.0.3"
lazy_static = "1.4.0"
simple-server = "0.4.0"
toml = "0.5.6"
notify = "4.0.15"
regex = "1"
serde = {version = "1.0.97", features = ["derive"]}
