[package]
name = "scroll"
version = "0.1.0"
authors = ["metin ur <metinur.1311@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sop = { path = "../sop" }
ste = { path = "../ste" }
clap = "2.33.0"
walkdir = "2.3.1"
